--- a/app/src/main/res/layout/memorize_sellect.xml
+++ b/app/src/main/res/layout/memorize_sellect.xml
@@ -7,7 +7,7 @@
     android:background="#FFF1EF">
 
     <Button
-        android:id="@+id/english"
+        android:id="@+id/ms_word_btn"
         android:layout_width="142dp"
         android:layout_height="130dp"
         android:backgroundTint="@color/white"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.55" />
 
     <Button
-        android:id="@+id/meaning"
+        android:id="@+id/ms_meaning_btn"
         android:layout_width="142dp"
         android:layout_height="130dp"
         android:backgroundTint="#FFFFFF"
@@ -40,7 +40,6 @@
         app:layout_constraintVertical_bias="0.55" />
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
