--- a/app/src/main/res/layout/memorize.xml
+++ b/app/src/main/res/layout/memorize.xml
@@ -37,6 +37,7 @@ android:background="#FFF1EF">
         android:padding="15dp" >
 
         <TextView
+            android:id="@+id/mean_kor_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -70,17 +71,33 @@ android:background="#FFF1EF">
                 android:layout_height="match_parent"
                 android:id="@+id/showWord"
                 android:text="breath"
+                android:textSize="30dp"
                 android:textStyle="bold"
                 android:gravity="center"/>
 
         </FrameLayout>
 
-        <ImageButton
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:background="@android:color/transparent"
-            android:src="@drawable/next" />
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/mean_prev_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="200dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/prev"/>
+            <ImageButton
+                android:id="@+id/mean_next_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:background="@android:color/transparent"
+                android:src="@drawable/next" />
+        </LinearLayout>
+
     </LinearLayout>
 </FrameLayout>
 </LinearLayout>
