--- a/app/src/main/res/layout/spelling_test.xml
+++ b/app/src/main/res/layout/spelling_test.xml
@@ -26,19 +26,34 @@
             android:orientation="vertical"
             android:padding="15dp">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:background="@drawable/spell_box">
                 <TextView
+                    android:id="@+id/spelling_test_kor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="물속의"
                     android:textSize="30dp"
                     android:layout_margin="50dp"/>
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/spelling_test_correct"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/correct"
+                    android:visibility="invisible"/>
+                <ImageView
+                    android:id="@+id/spelling_test_wrong"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/wrong"
+                    android:visibility="invisible"/>
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,6 +62,7 @@
                 android:gravity="center">
 
                 <EditText
+                    android:id="@+id/spelling_test_eng"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -57,6 +73,7 @@
                     android:padding="10dp"/>
 
                 <Button
+                    android:id="@+id/spelling_test_submit_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/spell_box"
@@ -71,6 +88,7 @@
                     android:layout_margin="10dp"/>
 
                 <ImageButton
+                    android:id="@+id/spelling_text_next_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
