--- a/app/src/main/res/layout/wordlist_layout.xml
+++ b/app/src/main/res/layout/wordlist_layout.xml
@@ -7,40 +7,53 @@
     android:orientation="vertical"
     tools:context=".WordListView"
     >
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    <!--    <ImageView-->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <ImageButton
-            android:id="@+id/star_btn"
+                android:id="@+id/star_btn_list"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
                 android:background="@android:color/transparent"
-            android:src="@drawable/color_star"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="10dp"
-            android:paddingTop="3dp"
-            />
+                android:src="@drawable/star"
+                android:layout_gravity="center_horizontal|top"/>
 
+            <ImageButton
+                android:id="@+id/color_btn_list"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_gravity="center_horizontal|top"
+                android:background="@android:color/transparent"
+                android:src="@drawable/color_star"
+                android:visibility="invisible" />
+        </FrameLayout>
 
         <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+            android:layout_width="368dp"
+            android:layout_height="41dp"
+            android:orientation="vertical">
 
             <TextView
-            android:id="@+id/listword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:textSize="16dp"
-            android:text="TextView" />
-
+                android:id="@+id/EnglishWord"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="TextView"
+                android:textSize="15dp"
+                android:paddingTop = "9dp"
+                android:layout_marginLeft="8dp"
+                />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
