--- a/app/src/main/res/layout/wordlist_main.xml
+++ b/app/src/main/res/layout/wordlist_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +8,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -114,7 +112,7 @@
                 android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/test_btn"
+                android:id="@+id/test_btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
@@ -125,7 +123,7 @@
                 android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/retest_btn"
+                android:id="@+id/retest_btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
@@ -136,7 +134,7 @@
                 android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/match_btn"
+                android:id="@+id/match_btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
@@ -149,7 +147,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/listView"
+            android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@color/pink"
