--- a/app/src/main/res/layout/spelling_test.xml
+++ b/app/src/main/res/layout/spelling_test.xml
@@ -12,13 +12,26 @@
         android:orientation="vertical"
         android:background="@drawable/spell_background">
 
-        <ImageButton
-            android:id="@+id/imageButton5"
-            android:layout_width="73dp"
-            android:layout_height="75dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/star"
-            android:layout_gravity="center_horizontal|top"/>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <ImageButton
+                android:id="@+id/star_btn"
+                android:layout_width="73dp"
+                android:layout_height="75dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/star"
+                android:layout_gravity="center_horizontal|top"/>
+            <ImageButton
+                android:id="@+id/colorStar"
+                android:layout_width="73dp"
+                android:layout_height="75dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/color_star"
+                android:visibility="invisible"
+                android:layout_gravity="center_horizontal|top"/>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,13 +123,6 @@
                         android:visibility="invisible"/>
                 </FrameLayout>
 
-                <ImageButton
-                    android:id="@+id/spelling_text_next_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/next"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
