--- a/app/src/main/res/layout/wordlist_layout.xml
+++ b/app/src/main/res/layout/wordlist_layout.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -43,7 +44,8 @@
         <LinearLayout
             android:layout_width="368dp"
             android:layout_height="41dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/EnglishWord"
