--- a/app/src/main/res/layout/wordlist_layout.xml
+++ b/app/src/main/res/layout/wordlist_layout.xml
@@ -15,31 +15,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageButton
+            <ImageView
                 android:id="@+id/star_btn_list"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="5dp"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="5dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/star"
+                android:src="@drawable/dot"
                 android:layout_gravity="center_horizontal|top"/>
-
-            <ImageButton
-                android:id="@+id/color_btn_list"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="5dp"
-                android:layout_gravity="center_horizontal|top"
-                android:background="@android:color/transparent"
-                android:src="@drawable/color_star"
-                android:visibility="invisible" />
-        </FrameLayout>
 
         <LinearLayout
             android:layout_width="368dp"
