--- a/app/src/main/res/layout/activity_finish_memorize.xml
+++ b/app/src/main/res/layout/activity_finish_memorize.xml
@@ -27,7 +27,7 @@
         android:layout_width="142dp"
         android:layout_height="130dp"
         android:background="@color/pink"
-        android:text="리스트 화면으로"
+        android:text="메인 화면으로"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
