day5까지 단어 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <Button
@@ -46,6 +47,66 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="Day 3"
+        android:textSize="20dp"
+        android:gravity="center|left" />
+
+    <Button
+        android:id="@+id/day4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/main_button_custom"
+        android:drawableRight="@drawable/playbtn"
+        android:paddingLeft="25dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Day 4"
+        android:textSize="20dp"
+        android:gravity="center|left" />
+
+    <Button
+        android:id="@+id/day5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/main_button_custom"
+        android:drawableRight="@drawable/playbtn"
+        android:paddingLeft="25dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Day 5"
+        android:textSize="20dp"
+        android:gravity="center|left" />
+
+    <Button
+        android:id="@+id/day6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/main_button_custom"
+        android:drawableRight="@drawable/playbtn"
+        android:paddingLeft="25dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Day 6"
+        android:textSize="20dp"
+        android:gravity="center|left" />
+
+    <Button
+        android:id="@+id/day7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/main_button_custom"
+        android:drawableRight="@drawable/playbtn"
+        android:paddingLeft="25dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Day 7"
         android:textSize="20dp"
         android:gravity="center|left" />
 
