--- a/app/src/main/res/layout/matching_game.xml
+++ b/app/src/main/res/layout/matching_game.xml
@@ -5,6 +5,16 @@
     android:background="#f18c8e">
 
     <TextView
+        android:id="@+id/success"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="성공!"
+        android:textStyle="bold"
+        android:textSize="72dp"
+        android:gravity="center"
+        android:visibility="invisible"/>
+
+    <TextView
         android:layout_width="150dp"
         android:layout_height="70dp"
         android:text="Day 1\nMatching Game!"
@@ -36,6 +46,7 @@
         android:layout_marginRight="50dp" />
 
     <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="465dp"
         android:layout_gravity="bottom|center"
