--- a/app/src/main/res/layout/matching_game.xml
+++ b/app/src/main/res/layout/matching_game.xml
@@ -12,7 +12,7 @@
         android:textStyle="bold"
         android:textSize="72dp"
         android:gravity="center"
-        android:visibility="invisible"/>
+        android:visibility="visible"/>
 
     <TextView
         android:layout_width="150dp"
@@ -44,6 +44,18 @@
         android:textStyle="bold"
         android:layout_marginTop="70dp"
         android:layout_marginRight="50dp" />
+
+    <TextView
+        android:id="@+id/countingScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:text="100"
+        android:textSize="16dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="50dp"/>
 
     <TableLayout
         android:id="@+id/tableLayout"
