--- a/app/src/main/res/layout/matching_game.xml
+++ b/app/src/main/res/layout/matching_game.xml
@@ -12,7 +12,7 @@
         android:textStyle="bold"
         android:textSize="72dp"
         android:gravity="center"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="150dp"
