--- a/app/src/main/res/layout/matching_game.xml
+++ b/app/src/main/res/layout/matching_game.xml
@@ -15,10 +15,10 @@
         android:visibility="invisible"/>
 
     <TextView
-        android:layout_width="150dp"
+        android:layout_width="250dp"
         android:layout_height="70dp"
-        android:text="Day 1\nMatching Game!"
-        android:textSize="20dp"
+        android:text="Matching Game!"
+        android:textSize="25dp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginLeft="20dp"
